--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.3.0",
+    "@antv/g2": "^5.4.6",
     "antd": "^6.0.0",
     "next": "16.0.5",
     "react": "19.2.0",
